linked sign up to log in

--- a/Log In Page.html
+++ b/Log In Page.html
@@ -25,7 +25,7 @@
                         </form>
                         <section class="signupcontainer">
                             <div class="signups"></div>
-                            Don't have an account yet?<a href="#">Sign up now!</a>
+                            Don't have an account yet?<a href="Sign Up Page.html">Sign up now!</a>
                             </div>
                         </section>
                     </div>
