updated sign up and css Co-authored-by: indomiebrand <indomiebrand@users.noreply.github.com>

--- a/Log In Page.html
+++ b/Log In Page.html
@@ -6,7 +6,7 @@
         <title> Login Page - Study Inc.</title>
     </head>
     <body>
-        <section class = container >
+        <section class = signup >
                 <section class = contactcontainer>
                     <div class = 'splits'>
                         <form onsubmit="sendLogin(); reset(); return false;">
