--- a/Sign Up Page.html
+++ b/Sign Up Page.html
@@ -6,12 +6,12 @@
     <title> Sign Up</title>
 </head>
 <body>
-    <h1> Sign Up</h1>
+    <h1>Sign Up</h1>
     <div class="signup">
         <form>
             <label>Student ID</label>
             <input type="text"/>
-            <label>School Email</label>
+            <label>NP Email</label>
             <input type="email"/>
             <label>Password</label>
             <input type="password"/>
