--- a/Sign Up Page.html
+++ b/Sign Up Page.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang ="en">
 <head>
+    <meta name="viewport" content="width=device-wdith,inital-scale=1">
     <link href="style.css" rel="stylesheet" type ="text/css"/>
     <script src='script'.js></script>
     <title> Sign Up</title>
