--- a/Log In Page.html
+++ b/Log In Page.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div class="container">
-    <img src="Images/Asset 4.png" alt="signupHeader" class="signupHeader">
+    <img src="Images/Login.png" alt="signupHeader" class="signupHeader">
   <div class="wrapperLogin">
     <form action="#">
       <div class="input-box">
