--- a/Sign Up Page.html
+++ b/Sign Up Page.html
@@ -7,7 +7,7 @@
    </head>
 <body>
 	<div class="container">
-    <img src="Images/Asset 3.png" alt="signupHeader" class="signupHeader">
+    <img src="Images/SignUp.png" alt="signupHeader" class="signupHeader">
   <div class="wrapperSignup">
     <form action="#">
       <div class="input-box">
