--- a/Sign Up Page.html
+++ b/Sign Up Page.html
@@ -12,11 +12,11 @@
     <form id="update-signup-form">
       <div class="input-box">
 		  <p>STUDENT ID</p>
-        <input type="text" id="update-signup-studentid" required>
+        <input type="text" id="signup-studentid" required>
       </div>
       <div class="input-box">
 		  <p>NP E-MAIL</p>
-        <input type="email" id="update-signup-email" required>
+        <input type="email" id="signup-email" required>
       </div>
 		<div class="verify">
 			<button>Send verification code</button>
@@ -24,7 +24,7 @@
 		
       <div class="input-box">
 		  <p>PASSWORD</p>
-        <input type="password" id="update-signup-password" required>
+        <input type="password" id="signup-password" required>
       </div>
       <div class="input-box">
 		  <p>CONFIRM PASSWORD</p>
@@ -35,7 +35,7 @@
         <input type="text">
       </div>
       <div class="input-box button">
-        <input type="Submit" value="NEXT">
+        <input type="submit" value="NEXT" id="signup-submit">
       </div>
     </form>
   </div>
