added back button to signup

--- a/Sign Up Page.html
+++ b/Sign Up Page.html
@@ -8,6 +8,9 @@
 <body>
 	<div class="container">
     <img src="Images/SignUp.png" alt="signupHeader" class="signupHeader">
+    <div class="input-box">
+      <a href="Log In Page.html">Back</a>
+    </div>
   <div class="wrapperSignup" id="update-signup">
     <form id="update-signup-form">
       <div class="input-box">
