--- a/Log In Page.html
+++ b/Log In Page.html
@@ -10,20 +10,20 @@
 	<div class="container">
     <img src="Images/Login.png" alt="signupHeader" class="signupHeader">
   <div class="wrapperLogin">
-    <form action="#">
+    <form id="login-form">
       <div class="input-box">
 		  <p>NP E-MAIL</p>
-        <input type="email" required>
+        <input type="email" required id="login-email">
       </div>
       <div class="input-box">
 		  <p>PASSWORD</p>
-        <input type="password" required>
+        <input type="password" required id="login-password">
       </div>
 		<div class="forgotpass">
 			<button>Forgot password?</button>
 		</div>
       <div class="input-box button">
-        <input type="Submit" value="LOGIN">
+        <input type="submit" value = 'LOGIN'>
       </div>
 		<div class="signup">Don't have an account? <a href="Sign Up Page.html">Sign up now!</a></div>
     </form>
