added an animation just dont get the login wrong

--- a/loginpage.html
+++ b/loginpage.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
    </head>
 
 <body>
+
 	<div class="container">
     <img src="Images/Login.png" alt="signupHeader" class="signupHeader">
   <div class="wrapperLogin">
@@ -25,8 +27,9 @@
       <div class="input-box button">
         <input type="submit" value = 'LOGIN'>
       </div>
-		<div class="signup">Don't have an account? <a href="Sign Up Page.html">Sign up now!</a></div>
+		<div class="signup">Don't have an account? <a href="signuppage.html">Sign up now!</a></div>
     </form>
+    <div id="animation-container"><lottie-player id="login-animation" src="https://assets1.lottiefiles.com/packages/lf20_p8bfn5to.json"  background="transparent"  speed="1"  style="width: 150px; height: 150px;"  loop  autoplay></lottie-player></div>
   </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
