--- a/signuppage.html
+++ b/signuppage.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
    </head>
 <body>
 	<div class="container">
     <img src="Images/SignUp.png" alt="signupHeader" class="signupHeader">
     <div class="input-box">
-      <a href="Log In Page.html">Back</a>
+      <a href="loginpage.html">Back</a>
     </div>
   <div class="wrapperSignup" id="update-signup">
     <form id="update-signup-form">
       <div class="input-box">
 		  <p>STUDENT ID</p>
-        <input type="text" id="signup-studentid" required>
+        <input type="text" id="signup-studentid" required unique>
       </div>
       <div class="input-box">
 		  <p>NP E-MAIL</p>
-        <input type="email" id="signup-email" required>
+        <input type="email" id="signup-email" required unique>
       </div>
 		<div class="verify">
 			<button>Send verification code</button>
@@ -27,7 +28,7 @@
 		
       <div class="input-box">
 		  <p>PASSWORD</p>
-        <input type="password" id="signup-password" required>
+        <input type="password" id="signup-password" required unique>
       </div>
       <div class="input-box">
 		  <p>CONFIRM PASSWORD</p>
@@ -41,6 +42,7 @@
         <input type="submit" value="NEXT" id="signup-submit">
       </div>
     </form>
+    <div id="animation-container"><lottie-player id="login-animation" src="https://assets1.lottiefiles.com/packages/lf20_p8bfn5to.json"  background="transparent"  speed="1"  style="width: 150px; height: 150px;"  loop  autoplay></lottie-player></div>
   </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
