2 hours of progress and all i did was make a back button

--- a/signuppage.html
+++ b/signuppage.html
@@ -9,8 +9,8 @@
 <body>
 	<div class="container">
     <img src="Images/SignUp.png" alt="signupHeader" class="signupHeader">
-    <div class="input-box">
-      <a href="loginpage.html">Back</a>
+    <div class="back-box">
+      <a class='back-box-anchor' href="loginpage.html">Back</a>
     </div>
   <div class="wrapperSignup" id="update-signup">
     <form id="update-signup-form">
