--- a/Home.html
+++ b/Home.html
@@ -9,7 +9,7 @@
   <div class="home-container">
     <div class="under-container">
       <div class="imagecontainer">
-        <img src="Images/Icon.jpg">
+        <img src="Images/Icon.png">
         <div class="imagecontainer">
           <p id="studentid" style="margin-top: 50px;" ></p>
           <img src="Images/cloud-100.jpg" style="width: 120%; margin-top: 55px; margin-left: 5px;">
@@ -68,7 +68,7 @@
     <a href="home.html"><img src="Images/home_button-100.jpg"></a>
     <a href="forum.html"><img src="Images/forum-100.jpg"></a>
     <a href="community.html"><img src="Images/community-100.jpg"></a>
-    <a href="minigames.html"><img src="Images/Icon.jpg"></a>
+    <a href="minigames.html"><img src="Images/Icon.png"></a>
     </div>
   </div>
 
