--- a/forum.html
+++ b/forum.html
@@ -5,10 +5,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
   </head>
-<body>
+  <body class="forumbody">
+      <div class="forumcontainer">
+        <div class="forumheadercontainer">
+          <div class="forumtitle">
+            <h1>Forum</h1>
+          </div>
+          <div class="forumheader" id="highlighted">
+            <a href="forum.html">Featured Topic</a>
+          </div>
+          <div class="forumheader">
+            <a href="forum-category.html">Category</a>
+          </div>
+          <div class="forumheader">
+            All Posts
+          </div>
+        </div>
+        <div class="forumpostcontainer" id="post1">
+          <div class="forumpost">
+            <img src="Images/icon1.png">
+            <div class="forumname">
+              <h3>LEMON458</h3>
+            </div>
+          </div>
+          <div class="forumpost" style="margin-left: 175px; position:absolute;width: 300px;height: 125px;">
+            <h2 style="color:darkblue">Struggling with ID</h2>
+            <div class="ict">
+              <p>ICT</p>
+            </div>
+            <p>Published on: 08-02-2023</p>
+            <p style="font-style: italic;">Can someobody please help with ID?</p>
+          </div>
+        </div>
+        <div class="forumpostcontainer" id="post2">
+          <div class="forumpost">
+            <img src="Images/icon2.png">
+            <div class="forumname">
+              <h3>ORANGE110</h3>
+            </div>
+          </div>
+          <div class="forumpost" style="margin-left: 175px; position:absolute;width: 300px;height: 125px;">
+            <h2 style="color:darkblue">HELP HOW TO MAKE FORUM</h2>
+            <div class="ict">
+              <p>ICT</p>
+            </div>
+            <p>Published on: 17-02-2023</p>
+            <p style="font-style: italic;"> THE DEADLINE IS TODAY</p>
+          </div>
+        </div>
+        <div class="forumpostcontainer" id="post3">
+          <div class="forumpost">
+            <img src="Images/Icon.png">
+            <div class="forumname">
+              <h3>SONIC689</h3>
+            </div>
+          </div>
+          <div class="forumpost" style="margin-left: 175px; position:absolute;width: 300px;height: 125px;">
+            <h2 style="color:darkblue">Depressed</h2>
+            <div class="misc">
+              <p>MISC</p>
+            </div>
+            <p>Published on: 16-02-2023</p>
+            <p style="font-style: italic;">ID should stand for IDONTKNOWHOWTODO</p>
+          </div>
+        </div>
+        <div class="bottomnavcontainer">
+          <div class="bottomnav" style="margin-top:-20px;">
+            <a href="home.html"><img src="Images/home_button-100.jpg"></a>
+            <a href="forum.html"><img src="Images/forum-100.jpg"></a>
+            <a href="community.html"><img src="Images/community-100.jpg"></a>
+            <a href="minigames.html"><img src="Images/Icon.png"></a>
+          </div>
+        </div>
+      </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="script.js"></script>
+  </body>
   
-        
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="script.js"></script>
-</body>
 </html>
