--- a/Home.html
+++ b/Home.html
@@ -15,8 +15,6 @@
           <img src="Images/cloud-100.jpg" style="width: 120%; margin-top: 55px; margin-left: 5px;">
         </div>
       </div>
-      
-      <p id="studentid" ></p>
       <p id ="email" ></p>
       <div class="coinscontainer">
         <p>0 Coins</p>
@@ -67,8 +65,8 @@
     <div class="bottomnav">
     <a href="home.html"><img src="Images/home_button-100.jpg"></a>
     <a href="forum.html"><img src="Images/forum-100.jpg"></a>
-    <a href="community.html"><img src="Images/community-100.jpg"></a>
-    <a href="minigames.html"><img src="Images/Icon.png"></a>
+    <a href="community.html"><img src="Images/community.png"></a>
+    <a href="leaderboard.html"><img src="Images/leaderboard.png"></a>
     </div>
   </div>
 
