--- a/forum-category.html
+++ b/forum-category.html
@@ -32,14 +32,14 @@
         <img src="Images/is_button.png">
         <img src="Images/life_science__c.t_button.png">
        </div>
-        <div class="bottomnavcontainer">
-          <div class="bottomnav" style="margin-top:-20px;">
-            <a href="home.html"><img src="Images/home_button-100.jpg"></a>
-            <a href="forum.html"><img src="Images/forum-100.jpg"></a>
-            <a href="community.html"><img src="Images/community-100.jpg"></a>
-            <a href="minigames.html"><img src="Images/Icon.png"></a>
-          </div>
+       <div class="bottomnavcontainer">
+        <div class="bottomnav" style="margin-top:-20px;">
+          <a href="home.html"><img src="Images/home_button-100.jpg"></a>
+          <a href="forum.html"><img src="Images/forum-100.jpg"></a>
+          <a href="community.html"><img src="Images/community.png"></a>
+          <a href="leaderboard.html"><img src="Images/leaderboard.png"></a>
         </div>
+      </div>
       </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="script.js"></script>
