--- a/forum.html
+++ b/forum.html
@@ -73,8 +73,8 @@
           <div class="bottomnav" style="margin-top:-20px;">
             <a href="home.html"><img src="Images/home_button-100.jpg"></a>
             <a href="forum.html"><img src="Images/forum-100.jpg"></a>
-            <a href="community.html"><img src="Images/community-100.jpg"></a>
-            <a href="minigames.html"><img src="Images/Icon.png"></a>
+            <a href="community.html"><img src="Images/community.png"></a>
+            <a href="leaderboard.html"><img src="Images/leaderboard.png"></a>
           </div>
         </div>
       </div>
