--- a/community.html
+++ b/community.html
@@ -54,8 +54,8 @@
         <div class="bottomnav" style="margin-top:-20px; margin-left: 2px;">
           <a href="home.html"><img src="Images/home_button-100.jpg"></a>
           <a href="forum.html"><img src="Images/forum-100.jpg"></a>
-          <a href="community.html"><img src="Images/community-100.jpg"></a>
-          <a href="minigames.html"><img src="Images/Icon.png"></a>
+          <a href="community.html"><img src="Images/community.png"></a>
+          <a href="leaderboard.html"><img src="Images/leaderboard.png"></a>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
