--- a/Home.html
+++ b/Home.html
@@ -40,19 +40,25 @@
         <button class="close-btn">X</button>
       </div>
     </div>
+    <div id="popup2" class="popup">
+      <div class="popup-content">
+        <div class="sketchfab-embed-wrapper"> <iframe title="shooting star badge" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/7ff444711fb04b6d8e5466e40b9ba72a/embed"> </iframe> <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> <a href="https://sketchfab.com/3d-models/shooting-star-badge-7ff444711fb04b6d8e5466e40b9ba72a?utm_medium=embed&utm_campaign=share-popup&utm_content=7ff444711fb04b6d8e5466e40b9ba72a" target="_blank" style="font-weight: bold; color: #1CAAD9;"> shooting star badge </a> by <a href="https://sketchfab.com/s0nik?utm_medium=embed&utm_campaign=share-popup&utm_content=7ff444711fb04b6d8e5466e40b9ba72a" target="_blank" style="font-weight: bold; color: #1CAAD9;"> s0nik </a> on <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=7ff444711fb04b6d8e5466e40b9ba72a" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a></p></div>
+        <button class="close-btn">X</button>
+      </div>
+    </div>
     <div class="badgecontainer">
       <div class="badgeimage">
         <img src="Images/cloud-100.jpg" onclick="showPopup('popup1')">
       </div>
     </div>
       <div class="badgecontainer">
-        <p>placeholder</p>
+        <img src="Images/shootingstar.png"  onclick="showPopup('popup2')">
       </div>
       <div class="badgecontainer">
-        <p>placeholder</p>
+        <p></p>
       </div>
       <div class="badgecontainer">
-        <p>placeholder</p>
+        <p></p>
       </div>
   </div>
   <div class="rewardcontainer">
