--- a/leaderboard.html
+++ b/leaderboard.html
@@ -22,7 +22,7 @@
             <h1>13999</h1>
             <h1>0</h1>
         </div>
-        <p id="email" style="display:none;postion:absolute;"></p>
+        <p id="email" style="display:none;position:absolute;"></p>
         <div class="imagecontainer"style="position:absolute;color:darkgreen; margin-bottom:325px;margin-right: 300px;font-weight: bolder;">
         <p id="studentid" style="color:darkgreen"></p>
         <img src="Images/cloud-100.jpg" style="width:40px">
